# term-snake

./: .gitignore  CMakeLists.txt
src/: main.c
